# dspsr

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  FindEpsic.cmake  FindPSRCHIVE.cmake  Makefile.am  config.h.in  configure.ac  configure.in
Documentation/: dspsr.dox
Kernel/: CMakeLists.txt
Kernel/Classes/: ASCIIObservation.C  BitSeries.C  BlockFile.C  CMakeLists.txt  ChannelOrder.C  DataSeries.C  ExcisionUnpacker.C  File.C  GenericTwoBitCorrection.C  Input.C  InputBuffering.C  InputBufferingShare.C  MPIServer.C  Makefile.am  Memory.C  MemoryCUDA.C  MultiFile.C  Observation.C  ObservationChange.C  ObservationInterface.C  OutputFile.C  Rational.C  Rational.h  Seekable.C  SubByteTwoBitCorrection.C  TimeSeries.C  TwoBitCorrection.C  TwoBitCorrectionConfig.C  TwoBitLookup.C  WeightedTimeSeries.C  environ.h  test_Rational.C
Kernel/Classes/dsp/: BlockFile.h  BufferingPolicy.h  File.h  InputBuffering.h  InputBufferingShare.h  Memory.h  MemoryCUDA.h  Observation.h  ObservationChange.h  SubByteTwoBitCorrection.h  TimeSeries.h  TwoBitCorrection.h  TwoBitCorrectionConfig.h
Kernel/Formats/: Unpacker_registry.C
Kernel/Formats/cpsr2/: yamasaki_verify.C
Kernel/Formats/fits/: FITSFile.C
Kernel/Formats/uwb/: Makefile.am  UWBTwoBitUnpacker.C
Kernel/Formats/uwb/dsp/: UWBTwoBitUnpacker.h
Kernel/Formats/vdif/: VDIFFile.C  VDIFTwoBitCorrectionMulti.C
Kernel/Formats/vdif/dsp/: VDIFFile.h  VDIFTwoBitCorrectionMulti.h
Signal/General/: Apodization.C  BitStatsPlotter.C  Convolution.C  Debirefraction.C  Dedispersion.C  Dump.C  ExcisionStatsPlotter.C  Filterbank.C  Filterbank.cc  FilterbankCPU.cc  FilterbankCUDA.cu  FilterbankConfig.C  FilterbankConfig.cc  FilterbankEngineCPU.C  FilterbankInverseCPU.cc  InverseFilterbank.C  InverseFilterbankEngineCPU.C  LoadToFil.C  Makefile.am  MultiThread.C  PlasmaResponse.C  PlasmaResponseProduct.C  PolnCalibration.C  Response.C  ResponseProduct.C  SampleDelay.C  ScalarAdd.C  SingleThread.C  cross_detect.ic  digifil.C  digistat.C  dmsmear.C  fftbatch_speed.C  filterbank_speed.C  passband.C  test_OptimalFFT.C  unit_test.cc
Signal/General/dsp/: Apodization.h  BitStatsPlotter.h  Convolution.h  Debirefraction.h  Dedispersion.h  Filterbank.h  FilterbankCPU.h  FilterbankCPU.hpp  FilterbankCUDA.h  FilterbankConfig.h  FilterbankEngine.h  FilterbankEngineCPU.h  FilterbankInverseCPU.h  InverseFilterbank.h  InverseFilterbankEngineCPU.h  LoadToFil.h  PlasmaResponse.h  PlasmaResponseProduct.h  PolnCalibration.h  Response.h  ScalarAdd.h  SingleThread.h
Signal/Pulsar/: Archiver.C  Fold.C  LoadToFold1.C  LoadToFoldConfig.C  LoadToFoldN.C  Makefile.am  PhaseLockedFilterbank.C  PhaseLockedFilterbankCUDA.cu  PulsarSimulator.C  Subint.C  UnloaderShare.C  dspsr.C  test_PulsarSimulator.C
Signal/Pulsar/dsp/: Archiver.h  LoadToFold1.h  LoadToFoldConfig.h  LoadToFoldN.h  PhaseLockedFilterbank.h  PulsarSimulator.h  Subint.h
Unit_Tests/: StepIterator_test.cxx  StepIterator_test.h
Unittest/: Makefile.am  sample1_gtest  test.cxx  unit_test.cc
config/: ax_cxx_compile_stdcxx.m4  cuda.m4
python/: Makefile.am  dspsr.i
test/: Makefile.am  create_dump_data.py  test_ScalarAdd.cpp  test_config.toml
utils/SkaCurveComparison/data/: ska-in.txt  ska-out.txt
utils/SkaCurveComparison/data/dspsr_output/: m2007-05-18-155721_cpu.ar  m2007-05-18-155721_cuda.ar
utils/SkaCurveComparison/data/til-examples/: cpu.ar  cuda.ar  original.ar  unfiltered.ar
utils/SkaCurveComparison/src/: jclasses
utils/SkaCurveComparison/src/archidevsys/co/nz/skapt/curvecomparison/: AppCurveComp.java
utils/SkaCurveComparison/src/archidevsys/co/nz/skapt/curvecomparison/curve/: Curve.java  CurveComparison.java  DataRow.java
utils/SkaCurveComparison/src/archidevsys/co/nz/skapt/curvecomparison/misc/: CurveCompConstants.java  CurveCompContext.java  ProcessLogManager.java  Utility.java
